Enable Java JDK Preview Features